adding comments and cleaning up
